--- a/default/hypr/input.conf
+++ b/default/hypr/input.conf
@@ -1,9 +1,9 @@
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = us,no
     kb_variant =
     kb_model =
-    kb_options = compose:caps
+    kb_options = grp:caps_toggle
     kb_rules =
 
     follow_mouse = 1
